# agentic-workflow

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  REQUIREMENTS.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
app/: ai_logger.py  celery_app.py  config.py  database.py  decorators.py  enums.py  exceptions.py  main.py
app/models/: __init__.py  lantern.py
app/routers/: __init__.py  lantern.py
app/schemas/: lantern.py
app/services/: lantern.py
app/tasks/: lantern.py
scripts/: log_agent_action.py
tests/: conftest.py  test_lantern.py  test_tasks_lantern.py
