[project]
name = "agentic-workflow"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "beanie",
    "motor",
    "pydantic-settings",
    "celery[redis]>=5.6.3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "mongomock-motor",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]
